<?xml version="1.0"?>
<package format="2">
  <name>json_msgs</name>
  <version>0.1.0</version>
  <description>
     Generic JSON messages and services for dynamic data.
  </description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/redis_store_msgs</url> -->
  <author email="alex@machinekoder.com">Alexander Rössler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
