<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>json_msgs</name>
  <version>0.1.0</version>
  <description>
     Generic JSON messages and services for dynamic data.
  </description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/redis_store_msgs</url> -->
  <author email="alex@machinekoder.com">Alexander Rössler</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
